--- a/serverless.yml
+++ b/serverless.yml
@@ -61,8 +61,8 @@ functions:
           cors: true
           authorizer: aws_iam
 
-  rankPosts:
-    handler: rank-posts.main
+  rank:
+    handler: rank.main
     events:
       - http:
           path: imageboard
