added list endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -78,3 +78,12 @@ functions:
           method: post
           cors: true
           authorizer: aws_iam
+
+  list:
+    handler: list.main
+    events:
+      - http:
+          path: imageboard
+          method: post
+          cors: true
+          authorizer: aws_iam
