--- a/serverless.yml
+++ b/serverless.yml
@@ -33,6 +33,7 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
+        - dynamodb:BatchGetItem
       Resource: "arn:aws:dynamodb:us-east-1:*:*"
 
 functions:
